Fix Code Style-Require newline whitespace

--- a/assets/font-awesome/css/svg-with-js.css
+++ b/assets/font-awesome/css/svg-with-js.css
@@ -85,7 +85,8 @@ svg:not(:root).svg-inline--fa {
     -webkit-transform-origin: center center;
             transform-origin: center center; }
 
-.fa-layers-text, .fa-layers-counter {
+.fa-layers-text, 
+.fa-layers-counter {
   display: inline-block;
   position: absolute;
   text-align: center; }
